--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "firebase": "^6.4.1",
     "firebase-admin": "^8.4.0",
-    "firebase-functions": "^2.3.0"
+    "firebase-functions": "^2.3.0",
+    "busboy": "^0.3.0"
   },
   "private": true
 }
